:art: Improve layout of pages based on essential information
Now use xl headers all the way down to small headers

--- a/app/views/12/verification-report/defendant-details.html
+++ b/app/views/12/verification-report/defendant-details.html
@@ -50,17 +50,17 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="defendant-details" method="post" novalidate>
-          <span class="govuk-caption-l">
+          <span class="govuk-caption-xl">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-l">
+          <h1 class="govuk-heading-xl">
             Defendant details
           </h1>
           <div id="defendant-details-hint" class="govuk-hint">
             This information comes from NDelius. If it is not accurate you can update it here. You will need to update NDelius separately.
           </div>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="full-name">
+            <h2 class="govuk-heading-l" for="full-name">
               Full name
             </h2>
             <input class="govuk-input govuk-input--width-30" id="full-name" name="full-name" type="full-name" value="{{data['full-name'] | default('Dylan Adam Armstrong')}}">
@@ -68,7 +68,7 @@
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h2 class="govuk-fieldset__heading">
                   Current address
                 </h2>
@@ -114,7 +114,7 @@
                 id: "address-verification",
                 name: "address-verification",
                 label: {
-                  html: "<h3 class='govuk-heading-s'>How have you confirmed the current address is correct?</h3>"
+                  html: "<h3 class='govuk-heading-m'>How have you confirmed the current address is correct?</h3>"
                 },
                 items: addressVerificationList
               }) }}
@@ -123,7 +123,7 @@
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset" role="group" aria-describedby="date-of-birth-hint">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h2 class="govuk-fieldset__heading">
                   Date of birth
                 </h2>
