--- a/app/views/12/verification-report/essential-information.html
+++ b/app/views/12/verification-report/essential-information.html
@@ -50,7 +50,7 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="essential-information" method="post" novalidate>
-          <span class="govuk-caption-l">
+          <span class="govuk-caption-xl">
             Dylan Adam Armstrong CRN: E234516
           </span>
           <h1 class="govuk-heading-xl">
@@ -189,7 +189,7 @@
               id: "domestic-abuse-verification",
               name: "domestic-abuse-verification",
               label: {
-                html: "<h3 class='govuk-heading-m'>How have you checked for previous domestic abuse charges?</h3>"
+                html: "<h4 class='govuk-heading-s'>How have you checked for previous domestic abuse charges?</h4>"
               },
               items: domesticAbuseVerificationList
             }) }}
@@ -229,7 +229,7 @@
               id: "safeguarding-verification",
               name: "safeguarding-verification",
               label: {
-                html: "<h3 class='govuk-header-s'>How have you checked for concerns about child safeguarding?</h3>"
+                html: "<h4 class='govuk-heading-s'>How have you checked for concerns about child safeguarding?</h4>"
               },
               items: safeguardingVerificationList
             }) }}
@@ -251,7 +251,7 @@
               id: "dependants-caring-verification",
               name: "dependants-caring-verification",
               label: {
-                html: "<h3 class='govuk-header-s'>How have you checked their dependants and caring responsibilities?</h3>"
+                html: "<h3 class='govuk-heading-m'>How have you checked their dependants and caring responsibilities?</h3>"
               },
               items: dependantsCaringVerificationList
             }) }}
@@ -273,7 +273,7 @@
               id: "employment-verification",
               name: "employment-verification",
               label: {
-                html: "<h3 class='govuk-header-s'>How have you checked their employment/working pattern?</h3>"
+                html: "<h3 class='govuk-heading-m'>How have you checked their employment/working pattern?</h3>"
               },
               items: employmentVerificationList
             }) }}
@@ -293,7 +293,7 @@
               id: "health-conditions-verification",
               name: "health-conditions-verification",
               label: {
-                html: "<h3 class='govuk-header-s'>How have you checked relevant health conditions?</h3>"
+                html: "<h3 class='govuk-heading-s'>How have you checked relevant health conditions?</h3>"
               },
               items: healthConditionsVerificationList
             }) }}
