--- a/app/views/12/verification-report/publish-report.html
+++ b/app/views/12/verification-report/publish-report.html
@@ -50,10 +50,10 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="publish-report" method="post" novalidate>
-          <span class="govuk-caption-l">
+          <span class="govuk-caption-xl">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-l">Are you sure you want to publish
+          <h1 class="govuk-heading-xl">Are you sure you want to publish
             this report?</h1>
           <p class="govuk-body">This will lock the report.</p>
           <p class="govuk-body">You will not be able to make any changes once
