--- a/app/views/12/verification-report/sign-your-report.html
+++ b/app/views/12/verification-report/sign-your-report.html
@@ -51,10 +51,10 @@
       <main id="main-content" class="app-content" role="main">
         <form action="sign-your-report" method="post" novalidate>
           <div class="govuk-form-group">
-            <span class="govuk-caption-l">
+            <span class="govuk-caption-xl">
               Dylan Adam Armstrong CRN: E234516
             </span>
-            <h1 class="govuk-heading-l">
+            <h1 class="govuk-heading-xl">
               Sign your report
             </h1>
             <input class="govuk-input govuk-input--width-20" id="assessor-signature" name="assessor-signature" type="assessor-signature" value="{{data['assessor-signature']}}">
