--- a/app/views/12/verification-report/suitability-decision-error.html
+++ b/app/views/12/verification-report/suitability-decision-error.html
@@ -65,17 +65,17 @@
               </div>
             </div>
           </div>
-          <span class="govuk-caption-l">
+          <span class="govuk-caption-xl">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-l">
+          <h1 class="govuk-heading-xl">
             Suitability decision
           </h1>
           <p class="govuk-body">This information will be included in the
             verification report which will be visible to the court and judiciary.</p>
           <div class="govuk-form-group govuk-form-group--error">
             <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+              <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                 <h2 class="govuk-fieldset__heading">Based on the information
                   you have from agency checks and the defendant interview,
                   what is the defendant suitable for?</h2>
