--- a/app/views/12/verification-report/unpaid-work.html
+++ b/app/views/12/verification-report/unpaid-work.html
@@ -50,10 +50,10 @@
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
         <form action="unpaid-work" method="post" novalidate>
-          <span class="govuk-caption-l">Dylan Adam Armstrong CRN: E234516</span>
-          <h1 class="govuk-heading-l">Suitability for unpaid work</h1>
+          <span class="govuk-caption-xl">Dylan Adam Armstrong CRN: E234516</span>
+          <h1 class="govuk-heading-xl">Suitability for unpaid work</h1>
           <div class="govuk-form-group">
-            <h2 class="govuk-heading-m" for="verify-dwp-involvement">Benefits</h2>
+            <h2 class="govuk-heading-l" for="verify-dwp-involvement">Benefits</h2>
             <div id="verify-dwp-involvement-hint" class="govuk-hint">
               Record any benefits the defendant gets that may affect their
               eligibility or fitness for unpaid work.</div>
@@ -64,17 +64,17 @@
               id: "benefits-verification",
               name: "benefits-verification",
               label: {
-                html: "<h3 class='govuk-header-s'>How have you checked their benefits?</h3>"
+                html: "<h3 class='govuk-heading-m'>How have you checked their benefits?</h3>"
               },
               items: benefitsVerificationList
             }) }}
           </div>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-form-group">
-            <h1 class="govuk-label-wrapper">
-              <label class="govuk-label govuk-label--m" for="more-detail">
+            <h2 class="govuk-label-wrapper">
+              <label class="govuk-label govuk-label--l" for="more-detail">
                 Supporting comments</label>
-            </h1>
+            </h2>
             <div id="more-detail-hint" class="govuk-hint">Include information
               here that supports your professional judgement. You should include
               anything of concern and explain how it has affected your
