Offences use modified address card
- make SCSS and html

:bug: Fix typos/bugs on delete address page
- Add missing ? to h1
- title tag reflects h1

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -10,6 +10,7 @@
 @import "components/split-pane";
 @import "components/subnav";
 @import "components/ticket-panel";
+@import "components/move-button";
 
 
 .not-known-on-form{
