--- a/app/views/12/verification-report/addresses/delete-address.html
+++ b/app/views/12/verification-report/addresses/delete-address.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Add address" %}
+{% set pageName="Delete address" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -13,9 +13,8 @@
           <span class="govuk-caption-l">
             Dylan Adam Armstrong CRN: E234516
           </span>
-          <h1 class="govuk-heading-l">
-            Are you sure you want to delete this address
-          </h1>
+          <h1 class="govuk-heading-l">Are you sure you want to delete this
+            address?</h1>
           <div class="moj-ticket-panel-container">
             <article class="moj-ticket-panel" aria-label="Other address 2">
               <section class="moj-ticket-panel__content moj-ticket-panel__content--blue" aria-label="Section 1">
