--- a/app/views/12/verification-report/offences.html
+++ b/app/views/12/verification-report/offences.html
@@ -71,6 +71,48 @@
                 </p>
               </div>
             </details>
+            <div class="moj-ticket-panel-container">
+              <article class="moj-ticket-panel">
+                <section class="moj-ticket-panel__actions moj-ticket-panel__actions--purple">
+                  <button class="govuk-move-button govuk-move-button__up"></button>
+                  <button class="govuk-move-button govuk-move-button__drag">
+                    <div class="govuk-move-button__drag-pattern">
+                      <svg width="100%" height="100%">
+                        <defs>
+                          <pattern id="polka-dots" x="0" y="0" width="24" height="20" patternUnits="userSpaceOnUse">
+                            <circle fill="#505a5f" cx="10" cy="10" r="5" />
+                          </pattern>
+                        </defs>
+                        <rect x="0" y="0" width="100%" height="100%" fill="url(#polka-dots)" />
+                      </svg>
+                    </div>
+                  </button>
+                  <button class="govuk-move-button govuk-move-button__down"></button>
+                </section>
+                <section class="moj-ticket-panel__content">
+                  <div class="govuk-grid-row govuk-!-margin-bottom-3">
+                    <div class="govuk-grid-column-two-thirds">
+                      <h3 class="govuk-heading-s">Offence 1</h3>
+                    </div>
+                    <div class="govuk-grid-column-one-third moj-ticket-panel__links">
+                      <a href="addresses/add-address.html?addEditAddress=Edit" class="govuk-link" style="font-weight: normal;">
+                        Edit</a> |
+                      <a href="addresses/delete-address" class="govuk-link" style="font-weight: normal;">
+                        Delete</a>
+                    </div>
+                  </div>
+                  <p class="govuk-body">
+                    OFFENCE 1 description including the date etc.  Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit. Nunc posuere
+                    justo in mi iaculis tincidunt. Donec tincidunt metus a
+                    vulputate rhoncus.
+                    <br><br>
+                    Donec diam turpis, dapibus eget consectetur sed, tincidunt
+                    a ex. Mauris in nunc quis velit porttitor fringilla.
+                  </p>
+                </section>
+              </article>
+            </div>
           <div class="govuk-form-group">
             <h2 class="govuk-label-wrapper">
               <label class="govuk-label govuk-label--l" for="offences">
