Add cancel link to back out of making an address

--- a/app/views/12/verification-report/addresses/add-address.html
+++ b/app/views/12/verification-report/addresses/add-address.html
@@ -60,6 +60,7 @@
             <button class="govuk-button" data-module="govuk-button">
               Save and return
             </button>
+            <a href="../essential-information" class="govuk-link" style="font-weight: normal;">Cancel</a>
           </div>
         </form>
       </main>
